DD-82 feat : 보낸 꿀 그룹 수정 api